--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-21 16:51 -->
+<!-- 2022-11-21 18:06 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgdf1e87c">1. 妙妙文章</a>
+<li><a href="#org3f81b87">1. 妙妙文章</a>
 <ul>
-<li><a href="#org78932a0">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgfb90827">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgee8f0b6">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org819efd6">1.4. 关于编辑器</a></li>
-<li><a href="#orgb11ac78">1.5. 关于代码</a>
+<li><a href="#orgbfb5f5f">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgdc23407">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgdd9829d">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org2d68ded">1.4. 关于编辑器</a></li>
+<li><a href="#org7f2ee22">1.5. 关于代码</a>
 <ul>
-<li><a href="#orge531cac">1.5.1. Lisp</a></li>
+<li><a href="#org2dc77d2">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orge277a61">1.6. 关于CPU</a></li>
-<li><a href="#orge2579b0">1.7. 关于算法</a>
+<li><a href="#org768b381">1.6. 关于CPU</a></li>
+<li><a href="#orge07d770">1.7. 关于算法</a>
 <ul>
-<li><a href="#org935a15f">1.7.1. 关于随机</a></li>
+<li><a href="#orgd9516f2">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orge38c0ee">1.8. 关于AI</a></li>
-<li><a href="#org540d337">1.9. 关于软件</a>
+<li><a href="#orgdfdc998">1.8. 关于AI</a></li>
+<li><a href="#org498eee1">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgcbc97fe">1.9.1. SQLite</a></li>
+<li><a href="#org8e1bb93">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org737b455">1.10. 关于workflow</a></li>
+<li><a href="#org015fceb">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org4c32d05">2. 棒棒视频</a>
+<li><a href="#orga47ef09">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgf5f8db1">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org6658e7d">2.2. 各种剧</a></li>
-<li><a href="#org58089a0">2.3. 电影</a></li>
+<li><a href="#org7139cd2">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgb69cd36">2.2. 各种剧</a></li>
+<li><a href="#org78c5af1">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org22e1216">3. 快乐游戏</a></li>
-<li><a href="#org5511082">4. 宝藏博主</a></li>
-<li><a href="#org53ec3a1">5. 有意思的</a>
+<li><a href="#org704fa9d">3. 快乐游戏</a></li>
+<li><a href="#orgef2d6ec">4. 宝藏博主</a></li>
+<li><a href="#orge458b66">5. 有意思的</a>
 <ul>
-<li><a href="#orgf5fa75a">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org8b4e541">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orge858db4">6. 我想玩的</a></li>
+<li><a href="#org31b8ff8">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgdf1e87c" class="outline-2">
-<h2 id="orgdf1e87c"><span class="section-number-2">1.</span> <a href="#orgdf1e87c">妙妙文章</a></h2>
+<div id="outline-container-org3f81b87" class="outline-2">
+<h2 id="org3f81b87"><span class="section-number-2">1.</span> <a href="#org3f81b87">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgb0c696e">
+<figure id="org0d9046d">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org78932a0" class="outline-3">
-<h3 id="org78932a0"><span class="section-number-3">1.1.</span> <a href="#org78932a0">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgbfb5f5f" class="outline-3">
+<h3 id="orgbfb5f5f"><span class="section-number-3">1.1.</span> <a href="#orgbfb5f5f">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgfb90827" class="outline-3">
-<h3 id="orgfb90827"><span class="section-number-3">1.2.</span> <a href="#orgfb90827">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgdc23407" class="outline-3">
+<h3 id="orgdc23407"><span class="section-number-3">1.2.</span> <a href="#orgdc23407">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgee8f0b6" class="outline-3">
-<h3 id="orgee8f0b6"><span class="section-number-3">1.3.</span> <a href="#orgee8f0b6">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgdd9829d" class="outline-3">
+<h3 id="orgdd9829d"><span class="section-number-3">1.3.</span> <a href="#orgdd9829d">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org819efd6" class="outline-3">
-<h3 id="org819efd6"><span class="section-number-3">1.4.</span> <a href="#org819efd6">关于编辑器</a></h3>
+<div id="outline-container-org2d68ded" class="outline-3">
+<h3 id="org2d68ded"><span class="section-number-3">1.4.</span> <a href="#org2d68ded">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgb11ac78" class="outline-3">
-<h3 id="orgb11ac78"><span class="section-number-3">1.5.</span> <a href="#orgb11ac78">关于代码</a></h3>
+<div id="outline-container-org7f2ee22" class="outline-3">
+<h3 id="org7f2ee22"><span class="section-number-3">1.5.</span> <a href="#org7f2ee22">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orge531cac" class="outline-4">
-<h4 id="orge531cac"><span class="section-number-4">1.5.1.</span> <a href="#orge531cac">Lisp</a></h4>
+<div id="outline-container-org2dc77d2" class="outline-4">
+<h4 id="org2dc77d2"><span class="section-number-4">1.5.1.</span> <a href="#org2dc77d2">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orge277a61" class="outline-3">
-<h3 id="orge277a61"><span class="section-number-3">1.6.</span> <a href="#orge277a61">关于CPU</a></h3>
+<div id="outline-container-org768b381" class="outline-3">
+<h3 id="org768b381"><span class="section-number-3">1.6.</span> <a href="#org768b381">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orge2579b0" class="outline-3">
-<h3 id="orge2579b0"><span class="section-number-3">1.7.</span> <a href="#orge2579b0">关于算法</a></h3>
+<div id="outline-container-orge07d770" class="outline-3">
+<h3 id="orge07d770"><span class="section-number-3">1.7.</span> <a href="#orge07d770">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org935a15f" class="outline-4">
-<h4 id="org935a15f"><span class="section-number-4">1.7.1.</span> <a href="#org935a15f">关于随机</a></h4>
+<div id="outline-container-orgd9516f2" class="outline-4">
+<h4 id="orgd9516f2"><span class="section-number-4">1.7.1.</span> <a href="#orgd9516f2">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge38c0ee" class="outline-3">
-<h3 id="orge38c0ee"><span class="section-number-3">1.8.</span> <a href="#orge38c0ee">关于AI</a></h3>
+<div id="outline-container-orgdfdc998" class="outline-3">
+<h3 id="orgdfdc998"><span class="section-number-3">1.8.</span> <a href="#orgdfdc998">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org540d337" class="outline-3">
-<h3 id="org540d337"><span class="section-number-3">1.9.</span> <a href="#org540d337">关于软件</a></h3>
+<div id="outline-container-org498eee1" class="outline-3">
+<h3 id="org498eee1"><span class="section-number-3">1.9.</span> <a href="#org498eee1">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgcbc97fe" class="outline-4">
-<h4 id="orgcbc97fe"><span class="section-number-4">1.9.1.</span> <a href="#orgcbc97fe">SQLite</a></h4>
+<div id="outline-container-org8e1bb93" class="outline-4">
+<h4 id="org8e1bb93"><span class="section-number-4">1.9.1.</span> <a href="#org8e1bb93">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org737b455" class="outline-3">
-<h3 id="org737b455"><span class="section-number-3">1.10.</span> <a href="#org737b455">关于workflow</a></h3>
+<div id="outline-container-org015fceb" class="outline-3">
+<h3 id="org015fceb"><span class="section-number-3">1.10.</span> <a href="#org015fceb">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org4c32d05" class="outline-2">
-<h2 id="org4c32d05"><span class="section-number-2">2.</span> <a href="#org4c32d05">棒棒视频</a></h2>
+<div id="outline-container-orga47ef09" class="outline-2">
+<h2 id="orga47ef09"><span class="section-number-2">2.</span> <a href="#orga47ef09">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -832,8 +832,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgf5f8db1" class="outline-3">
-<h3 id="orgf5f8db1"><span class="section-number-3">2.1.</span> <a href="#orgf5f8db1">Veritasium 真理元素</a></h3>
+<div id="outline-container-org7139cd2" class="outline-3">
+<h3 id="org7139cd2"><span class="section-number-3">2.1.</span> <a href="#org7139cd2">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -854,12 +854,18 @@ and exist, before it is generally received and practiced on.
 <li>Timely Feedback</li>
 <li>Deliberate Practice</li>
 </ul></li>
+<li><a href="https://www.youtube.com/watch?v=esQyYGezS7c">This place sells the strangest things. The world depends on them</a>
+标准物质&#x2014;Standard in a jar.
+<ul class="org-ul">
+<li><a href="https://www.ncrm.org.cn/">国家标准物质资源共享平台</a></li>
+<li><a href="http://html.rhhz.net/hjwsxzz/html/52740.htm">陈钰, 程义斌, 孟凡敏, 史黎薇. 国内外标准物质发展现况. 环境卫生学杂志, 2017, 7(2): 156-163.</a></li>
+</ul></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org6658e7d" class="outline-3">
-<h3 id="org6658e7d"><span class="section-number-3">2.2.</span> <a href="#org6658e7d">各种剧</a></h3>
+<div id="outline-container-orgb69cd36" class="outline-3">
+<h3 id="orgb69cd36"><span class="section-number-3">2.2.</span> <a href="#orgb69cd36">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -883,8 +889,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org58089a0" class="outline-3">
-<h3 id="org58089a0"><span class="section-number-3">2.3.</span> <a href="#org58089a0">电影</a></h3>
+<div id="outline-container-org78c5af1" class="outline-3">
+<h3 id="org78c5af1"><span class="section-number-3">2.3.</span> <a href="#org78c5af1">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -910,7 +916,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgce70cec">
+<figure id="org3ace63c">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -927,8 +933,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org22e1216" class="outline-2">
-<h2 id="org22e1216"><span class="section-number-2">3.</span> <a href="#org22e1216">快乐游戏</a></h2>
+<div id="outline-container-org704fa9d" class="outline-2">
+<h2 id="org704fa9d"><span class="section-number-2">3.</span> <a href="#org704fa9d">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -958,8 +964,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org5511082" class="outline-2">
-<h2 id="org5511082"><span class="section-number-2">4.</span> <a href="#org5511082">宝藏博主</a></h2>
+<div id="outline-container-orgef2d6ec" class="outline-2">
+<h2 id="orgef2d6ec"><span class="section-number-2">4.</span> <a href="#orgef2d6ec">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -970,7 +976,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org16fd1aa">
+<figure id="org270614c">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -978,8 +984,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org53ec3a1" class="outline-2">
-<h2 id="org53ec3a1"><span class="section-number-2">5.</span> <a href="#org53ec3a1">有意思的</a></h2>
+<div id="outline-container-orge458b66" class="outline-2">
+<h2 id="orge458b66"><span class="section-number-2">5.</span> <a href="#orge458b66">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1011,8 +1017,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgf5fa75a" class="outline-3">
-<h3 id="orgf5fa75a"><span class="section-number-3">5.1.</span> <a href="#orgf5fa75a">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org8b4e541" class="outline-3">
+<h3 id="org8b4e541"><span class="section-number-3">5.1.</span> <a href="#org8b4e541">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1024,8 +1030,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orge858db4" class="outline-2">
-<h2 id="orge858db4"><span class="section-number-2">6.</span> <a href="#orge858db4">我想玩的</a></h2>
+<div id="outline-container-org31b8ff8" class="outline-2">
+<h2 id="org31b8ff8"><span class="section-number-2">6.</span> <a href="#org31b8ff8">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1047,8 +1053,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-08 21:46</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-21 16:51</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-21 18:05</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-21 18:06</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
