--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-21 16:51 -->
+<!-- 2022-11-21 18:06 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org2379e4d">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org7d31802">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org4a5bae6">1.1. window config &amp; register</a></li>
-<li><a href="#org89d93c8">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org746c4bd">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgc281831">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org14970ad">1.1. window config &amp; register</a></li>
+<li><a href="#org320b5b9">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orgbfeb222">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org7d52030">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org2379e4d" class="outline-2">
-<h2 id="org2379e4d"><span class="section-number-2">1.</span> <a href="#org2379e4d">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org7d31802" class="outline-2">
+<h2 id="org7d31802"><span class="section-number-2">1.</span> <a href="#org7d31802">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org4a5bae6" class="outline-3">
-<h3 id="org4a5bae6"><span class="section-number-3">1.1.</span> <a href="#org4a5bae6">window config &amp; register</a></h3>
+<div id="outline-container-org14970ad" class="outline-3">
+<h3 id="org14970ad"><span class="section-number-3">1.1.</span> <a href="#org14970ad">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org89d93c8" class="outline-3">
-<h3 id="org89d93c8"><span class="section-number-3">1.2.</span> <a href="#org89d93c8"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org320b5b9" class="outline-3">
+<h3 id="org320b5b9"><span class="section-number-3">1.2.</span> <a href="#org320b5b9"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org746c4bd" class="outline-3">
-<h3 id="org746c4bd"><span class="section-number-3">1.3.</span> <a href="#org746c4bd"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orgbfeb222" class="outline-3">
+<h3 id="orgbfeb222"><span class="section-number-3">1.3.</span> <a href="#orgbfeb222"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgc281831" class="outline-3">
-<h3 id="orgc281831"><span class="section-number-3">1.4.</span> <a href="#orgc281831"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org7d52030" class="outline-3">
+<h3 id="org7d52030"><span class="section-number-3">1.4.</span> <a href="#org7d52030"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-21 16:51</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-21 18:06</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
